/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/UserProperties.proto";

package commontype;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.type";
option java_outer_classname = "TopicFilterOptionProtos";

enum RetainHandling{
  SEND_AT_SUBSCRIBE = 0;
  SEND_AT_SUBSCRIBE_IF_NOT_YET_EXISTS = 1;
  DONT_SEND_AT_SUBSCRIBE = 2;

}
message TopicFilterOption{
  commontype.QoS qos = 1;
  optional uint32 subId = 2;
  bool retainAsPublished = 3;
  bool noLocal = 4;
  RetainHandling retainHandling = 5;
  uint64 incarnation = 6;
  UserProperties userProperties = 7; // the granted user properties for this subscription
}